--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,59 +1,89 @@
 <% include ../partials/header %>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-3">
-            <p class="lead">YelpCamp</p>
-            <div class="list-group">
-                <li class="list-group-item active">Info 1</li>
-                <li class="list-group-item">Info 2</li>
-                <li class="list-group-item">Info 3</li>
+<div class="row">
+    <div class="col-md-3">
+        <p class="lead">YelpCamp</p>
+        <div class="list-group">
+            <li class="list-group-item active">Info 1</li>
+            <li class="list-group-item">Info 2</li>
+            <li class="list-group-item">Info 3</li>
+        </div>
+        
+        <div id="map"></div>
+    </div>
+    
+    <div class="col-md-9">
+        <div class="thumbnail">
+            <img class="img-responsive" src="<%= campground.image %>">
+            <div class="caption">
+                <h4 class="pull-right">$<%= campground.price %>/night</h4>
+                <h4><a href="#"><%= campground.name %></a></h4>
+                <p><%= campground.description %></p>
+                <p>
+                    <em>Submitted by <%= campground.author.username %></em>
+                </p>
+                <% if (currentUser && campground.author.id.equals(currentUser._id)) {%>
+                    <a href="/campgrounds/<%= campground._id %>/edit" class="btn btn-warning">Edit</a>
+                    <form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                        <button class="btn btn-danger">Delete</button>
+                    </form>
+                <% } %>
             </div>
         </div>
-        <div class="col-md-9">
-            <div class="thumbnail">
-                <img class="img-responsive" src="<%= campground.image %>">
-                <div class="caption">
-                    <h4 class="pull-right">$<%= campground.price %>/night</h4>
-                    <h4><a href="#"><%= campground.name %></a></h4>
-                    <p><%= campground.description %></p>
-                    <p>
-                        <em>Submitted by <%= campground.author.username %></em>
-                    </p>
-                    <% if (currentUser && campground.author.id.equals(currentUser._id)) {%>
-                        <a href="/campgrounds/<%= campground._id %>/edit" class="btn btn-warning">Edit</a>
-                        <form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                            <button class="btn btn-danger">Delete</button>
-                        </form>
-                    <% } %>
-                </div>
+        <div class="well">
+            <div class="text-right">
+                <a href="/campgrounds/<%= campground._id %>/comments/new" class="btn btn-success">Add new comment</a>    
             </div>
-            <div class="well">
-                <div class="text-right">
-                    <a href="/campgrounds/<%= campground._id %>/comments/new" class="btn btn-success">Add new comment</a>    
-                </div>
-                <hr>
-                <% campground.comments.forEach(function(comment){ %>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <strong><%= comment.author.username %></strong>
-                            <span class="pull-right">10 days ago</span>
-                            <p>
-                                <%= comment.text %>
-                            </p>
-                            <% if (currentUser && comment.author.id.equals(currentUser._id)) {%>
-                                <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
-                                <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
-                                    <button class="btn btn-xs btn-danger">Delete</button>
-                                </form>
-                            <% } %>
-                        </div>
+            <hr>
+            <% campground.comments.forEach(function(comment){ %>
+                <div class="row">
+                    <div class="col-md-12">
+                        <strong><%= comment.author.username %></strong>
+                        <span class="pull-right">10 days ago</span>
+                        <p>
+                            <%= comment.text %>
+                        </p>
+                        <% if (currentUser && comment.author.id.equals(currentUser._id)) {%>
+                            <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
+                            <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
+                                <button class="btn btn-xs btn-danger">Delete</button>
+                            </form>
+                        <% } %>
                     </div>
-                <% }) %>
-            </div>
+                </div>
+            <% }) %>
         </div>
     </div>
 </div>
 
+<script>
+    function initMap() {
+        var lat = <%= campground.lat %>;
+        var lng = <%= campground.lng %>;
+        var center = { lat: lat, lng: lng };
+        var map = new google.maps.Map(document.getElementById('map'), {
+           zoom: 8,
+           center: center,
+           scrollwheel: false
+        });
+        var contentString = `
+            <strong><%= campground.name %><br />
+            <%= campground.location %></strong>
+            <p><%= campground.description %></p>
+        `
+        var infowindow = new google.maps.InfoWindow({
+           content: contentString 
+        });
+        var marker = new google.maps.Marker({
+            position: center,
+            map: map
+        });
+        marker.addListener('click', function() {
+           infowindow.open(map, marker);
+        });
+    }
+</script>
+
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgJPFBW_Pcr2qB-U6jr6zV43GGODH-Zpo&callback=initMap" type="text/javascript"></script>
 
 <% include ../partials/footer %>
