--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,21 @@
 <% include partials/header %>
 
-<h1>Login</h1>
-
-<form action="/login" method="POST">
-    <input type="username" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <button class="btn btn-success">Login</button>
-</form>
+<div class="row">
+    <h1 class="h1cred">Login</h1>
+    <div class="credentials">
+        <form action="/login" method="post">
+            <div class="form-group">
+                <input class="form-control" type="text" name="username" placeholder="username">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="password" placeholder="username">
+            </div>
+            <div class="form-group">
+                <button class="btn btn-lg btn-primary btn-block">Login</button>
+            </div>
+        </form>
+        <a href="/campgrounds">Go Back</a>
+    </div>
+</div>
 
 <% include partials/footer %>
