--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,21 @@
 <% include partials/header %>
 
-<h1>Register</h1>
-
-<form action="/register" method="POST">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password"></input>
-    <button class="btn btn-success">Sign up!</button>
-</form>
+<div class="row">
+    <h1 class="h1cred">Register</h1>
+    <div class="credentials">
+        <form action="/register" method="post">
+            <div class="form-group">
+                <input class="form-control" type="text" name="username" placeholder="username">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="password" placeholder="username">
+            </div>
+            <div class="form-group">
+                <button class="btn btn-lg btn-primary btn-block">Register</button>
+            </div>
+        </form>
+        <a href="/campgrounds">Go Back</a>
+    </div>
+</div>
 
 <% include partials/footer %>
