--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -20,9 +20,9 @@
                 <h4><a href="#"><%= campground.name %></a></h4>
                 <p><%= campground.description %></p>
                 <p>
-                    <em>Submitted by <%= campground.author.username %>, <%= moment(campground.createdAt).fromNow() %></em>
+                    <em>Submitted by <%= campground.author.username %></em>
                 </p>
-                <% if (currentUser && campground.author.id.equals(currentUser._id)) {%>
+                <% if (currentUser && campground.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin) {%>
                     <a href="/campgrounds/<%= campground._id %>/edit" class="btn btn-warning">Edit</a>
                     <form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
                         <button class="btn btn-danger">Delete</button>
@@ -39,11 +39,11 @@
                 <div class="row">
                     <div class="col-md-12">
                         <strong><%= comment.author.username %></strong>
-                        <span class="pull-right"><%= moment(comment.createdAt).fromNow() %></span>
+                        <span class="pull-right">10 days ago</span>
                         <p>
                             <%= comment.text %>
                         </p>
-                        <% if (currentUser && comment.author.id.equals(currentUser._id)) {%>
+                        <% if (currentUser && comment.author.id.equals(currentUser._id)  || currentUser && currentUser.isAdmin) {%>
                             <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
                             <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
                                 <button class="btn btn-xs btn-danger">Delete</button>
